--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			</li>
 			<br>
 			<li class="list-inline-item">
-			    <img class="icon-js" src="icons\js.png" alt="js-icon" title="Javascript">
+			    <img class="icon-js" src="icons\JS.png" alt="js-icon" title="Javascript">
 			</li>
 		    <li class="list-inline-item">
 			    <img class="icon-Testrail" src="icons\Testrail.jpg" alt="Testrail-icon" title="Testrail">
